# obatcher

./: .gitignore  README.md  intelli7.csv  visualize.ipynb
benchmarks/: Makefile  avltree.ml  bench.ml  bench.sh  btree.ml  counter.ml  datalog_bench.ml  dune  new-trees.ipynb  paper-artefact.ipynb  paper-bench.ipynb  performance-graphs.ipynb  rbtree.ml  skiplist.ml  test_stats.txt  treap.ml  util.ml  utils.py  vanilla_map.ml  vanilla_set.ml  vebtree.ml  xfast.ml  yfast.ml
data/: avltree.ml  btree.ml  rbtree.ml  skiplist.ml
data/test/: btree_02_build.t  btree_tester.ml  dune  skiplist_01_basic.t  skiplist_tester.ml
data/test/unit/: dune  test_btree_parallel_search.ml
experiments/test/: imp_batch.t  rebuild.t
lib/: batcher.ml  batcher.mli  dune  multi_channel.ml  task.ml  task.mli  ts_container.ml  ts_container.mli
